{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 98,
  "lineage": "75d0a5e6-207b-204e-3118-d02576dab5a5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce92090026a80913",
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:elastic-ip/eipalloc-0ce92090026a80913",
            "association_id": "eipassoc-043a345f863197802",
            "domain": "vpc",
            "id": "eipalloc-0ce92090026a80913",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-06c612756478eab71",
            "private_dns": "ip-10-0-1-5.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-3-106-43-224.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.106.43.224",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "VaultAWS-NAT-EIP",
              "Project": "VaultAWS"
            },
            "tags_all": {
              "Name": "VaultAWS-NAT-EIP",
              "Project": "VaultAWS"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:internet-gateway/igw-0a42019f63359ca23",
            "id": "igw-0a42019f63359ca23",
            "owner_id": "107258763926",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "VaultAWS-IGW",
              "Project": "VaultAWS"
            },
            "tags_all": {
              "Name": "VaultAWS-IGW",
              "Project": "VaultAWS"
            },
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce92090026a80913",
            "association_id": "eipassoc-043a345f863197802",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0510f519069c4a9e2",
            "network_interface_id": "eni-06c612756478eab71",
            "private_ip": "10.0.1.5",
            "public_ip": "3.106.43.224",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fcd5b70366c34424",
            "tags": {
              "Name": "VaultAWS-NAT",
              "Project": "VaultAWS"
            },
            "tags_all": {
              "Name": "VaultAWS-NAT",
              "Project": "VaultAWS"
            },
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cd6c66b542a0429c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0510f519069c4a9e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0cd6c66b542a0429c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0cd6c66b542a0429c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a42019f63359ca23",
            "id": "r-rtb-0c689686dc6c69a081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0c689686dc6c69a08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0c689686dc6c69a08"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:route-table/rtb-0cd6c66b542a0429c",
            "id": "rtb-0cd6c66b542a0429c",
            "owner_id": "107258763926",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0510f519069c4a9e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VaultAWS-Private-RT",
              "Project": "VaultAWS"
            },
            "tags_all": {
              "Name": "VaultAWS-Private-RT",
              "Project": "VaultAWS"
            },
            "timeouts": null,
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "rtb-0cd6c66b542a0429c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:route-table/rtb-0c689686dc6c69a08",
            "id": "rtb-0c689686dc6c69a08",
            "owner_id": "107258763926",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a42019f63359ca23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VaultAWS-Public-RT",
              "Project": "VaultAWS"
            },
            "tags_all": {
              "Name": "VaultAWS-Public-RT",
              "Project": "VaultAWS"
            },
            "timeouts": null,
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "rtb-0c689686dc6c69a08",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c1c1eef17def9c0",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0cd6c66b542a0429c",
            "subnet_id": "subnet-0bc6fc58f6f7d22cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07492104744353e82",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0cd6c66b542a0429c",
            "subnet_id": "subnet-04a7ef1f6bbd78bdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f4b041fded9f3b3",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0c689686dc6c69a08",
            "subnet_id": "subnet-0fcd5b70366c34424"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ab769542e46f3f8",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0c689686dc6c69a08",
            "subnet_id": "subnet-015bcb94c9ef3dc39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:subnet/subnet-0bc6fc58f6f7d22cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc6fc58f6f7d22cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107258763926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "VaultAWS-Private-0",
              "Project": "VaultAWS",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "VaultAWS-Private-0",
              "Project": "VaultAWS",
              "Tier": "private"
            },
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "subnet-0bc6fc58f6f7d22cc",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:subnet/subnet-04a7ef1f6bbd78bdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a7ef1f6bbd78bdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107258763926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "VaultAWS-Private-1",
              "Project": "VaultAWS",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "VaultAWS-Private-1",
              "Project": "VaultAWS",
              "Tier": "private"
            },
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "subnet-04a7ef1f6bbd78bdc",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:subnet/subnet-0fcd5b70366c34424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcd5b70366c34424",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107258763926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "VaultAWS-Public-0",
              "Project": "VaultAWS",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "VaultAWS-Public-0",
              "Project": "VaultAWS",
              "Tier": "public"
            },
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "subnet-0fcd5b70366c34424",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:subnet/subnet-015bcb94c9ef3dc39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015bcb94c9ef3dc39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107258763926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "VaultAWS-Public-1",
              "Project": "VaultAWS",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "VaultAWS-Public-1",
              "Project": "VaultAWS",
              "Tier": "public"
            },
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "subnet-015bcb94c9ef3dc39",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:vpc/vpc-04349f17b3e4bd070",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ba17559f3279f55",
            "default_route_table_id": "rtb-0c907fdff27dd7796",
            "default_security_group_id": "sg-03ac107beb6d26a3f",
            "dhcp_options_id": "dopt-0d864bdf1322cf5a6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04349f17b3e4bd070",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c907fdff27dd7796",
            "owner_id": "107258763926",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "VaultAWS-VPC",
              "Project": "VaultAWS"
            },
            "tags_all": {
              "Name": "VaultAWS-VPC",
              "Project": "VaultAWS"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "vpc-04349f17b3e4bd070",
            "region": "ap-southeast-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:vpc-endpoint/vpce-077b2d3d949282b22",
            "cidr_blocks": [
              "52.94.13.0/24",
              "35.71.97.0/25",
              "35.71.97.128/26"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-077b2d3d949282b22",
            "ip_address_type": "ipv4",
            "owner_id": "107258763926",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-62a5400b",
            "private_dns_enabled": false,
            "region": "ap-southeast-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cd6c66b542a0429c"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.dynamodb",
            "service_region": "ap-southeast-2",
            "state": "available",
            "tags": {
              "Name": "VaultAWS-VPCE-DynamoDB",
              "Project": "VaultAWS"
            },
            "tags_all": {
              "Name": "VaultAWS-VPCE-DynamoDB",
              "Project": "VaultAWS"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "vpce-077b2d3d949282b22",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107258763926:vpc-endpoint/vpce-0086a98faaaea40a2",
            "cidr_blocks": [
              "3.5.164.0/22",
              "16.12.74.0/24",
              "3.5.168.0/23",
              "52.95.128.0/21"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0086a98faaaea40a2",
            "ip_address_type": "ipv4",
            "owner_id": "107258763926",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "region": "ap-southeast-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cd6c66b542a0429c"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "service_region": "ap-southeast-2",
            "state": "available",
            "tags": {
              "Name": "VaultAWS-VPCE-S3",
              "Project": "VaultAWS"
            },
            "tags_all": {
              "Name": "VaultAWS-VPCE-S3",
              "Project": "VaultAWS"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04349f17b3e4bd070"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "107258763926",
            "id": "vpce-0086a98faaaea40a2",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}